--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
           }
           context.closePath();
           // create the fill
-          context.fillStyle = "#f50b02";
+          context.fillStyle = "#22d3ee";
           context.fill();
           // create the image
           var image = new Image();
